Fix(#173): User can now edit its template layout and preview resulting LI post (content + carousel)

--- a/front-end/public/locales/en/translation.json
+++ b/front-end/public/locales/en/translation.json
@@ -331,6 +331,9 @@
 
   "EnterInEditAndPreviewMode": "Edit and preview",
 
+  "EditAndPreview": "Edit and preview",
+  "EditAndPreviewPDF": "Edit and preview PDF",
+
   "Stop": "Stop"
 
 }
