--- a/front-end/public/locales/fr/translation.json
+++ b/front-end/public/locales/fr/translation.json
@@ -333,6 +333,8 @@
   "DefaultLIBaseline": "Ceci est une baseline par défaut pour que vous voyiez à quoi cela ressemblera sur le vrai réseau social",
 
   "EnterInEditAndPreviewMode": "Editer et prévisualiser",
+  "EditAndPreview": "Editer et prévisualiser",
+  "EditAndPreviewPDF": "Editer et prévisualiser le PDF",
   
   "Stop": "Stop"
 
