Fix(#126): Content (post + carousel) is published on LinkedIn as DRAFT

--- a/front-end/public/locales/en/translation.json
+++ b/front-end/public/locales/en/translation.json
@@ -334,6 +334,10 @@
   "EditAndPreview": "Edit and preview",
   "EditAndPreviewPDF": "Edit and preview PDF",
 
+  "DataSaved": "Data has been saved.",
+
+  "UploadingContent": "The content is being uploaded.",
+
   "Stop": "Stop"
 
 }
