Fix(#189): Publishing on LinkedIn is ok now.
Resolved: #167: button names are labeld correctly in production mode
Resolved: #190: A publish button to really publish on LI is now available to the user

--- a/front-end/public/locales/en/translation.json
+++ b/front-end/public/locales/en/translation.json
@@ -338,6 +338,16 @@
 
   "UploadingContent": "The content is being uploaded.",
 
+  "SaveOnLinkedInAsDRAFT": "Save on LI.",  
+  "SavedOnLinkedInAsDRAFTOK": "Save as DRAFT on LinkedIn.",
+  "SavedOnLinkedInAsDRAFTOKDesc": "Content has been saved as Draft on LinkedIn.",
+
+  "SaveOnLinkedInAsPUBLISHED": "Publier sur LI.",  
+  "SavedOnLinkedInAsPUBLISHEDOK": "Save as PUBLISHED on LinkedIn.",
+  "SavedOnLinkedInAsPUBLISHEDOKDesc": "Content has been published on LinkedIn.",
+
+  "SavedOnLinkedInException": "Saving content on LinkedIn throws an error.",
+
   "Stop": "Stop"
 
 }
